docs/kubernetes/devops/traefik/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: traefik.chyidl.com
    http:
      paths:
      - backend:
          serviceName: traefik-ingress-service
          servicePort: admin
